--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -26,10 +26,12 @@
         <activity
             android:name="br.com.saboramazonico.activity.CategoriaActivity"
             android:label="@string/app_name" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
-        <activity android:name="br.com.saboramazonico.activity.ListaDePratosActivity" android:label="@string/app_name"></activity>
-        
-        
     </application>
 
 </manifest>
